function to get choices

--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
     </div>
     <h1>PICK</h1>
     <div class="icon">
-        <div class="rock"><img src="images/rock.svg" alt="" class="icon-images"></div>
-        <div class="paper"><img src="images/paper.svg" alt="" class="icon-images"></div>
-        <div class="scissors"><img src="images/scissor.svg" alt="" class="icon-images"></div>
+        <div class="rock"><img src="images/rock.svg" alt="" class="icon-images rock"></div>
+        <div class="paper"><img src="images/paper.svg" alt="" class="icon-images paper"></div>
+        <div class="scissors"><img src="images/scissors.svg" alt="" class="icon-images scissors"></div>
     </div>
     <h1>Computer</h1>
     <div class="computerIcon"><img src="" alt="" class="icon-images"></div>
