--- a/index.html
+++ b/index.html
@@ -1,27 +1,30 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Rock Paper Scissors</title>
-    <link rel="stylesheet" href="styles.css">
-</head>
-<body>
+    <link rel="stylesheet" href="styles.css" />
+  </head>
+  <body>
     <div class="score-container">
-        <div  class="score">
-            User - <span id="userScore">0</span></div>
-        <div  class="score">
-            Comp - <span id="computerScore">0</span>
-        </div>
+      <div class="score">User - <span id="userScore">0</span></div>
+      <div class="score">Comp - <span id="computerScore">0</span></div>
     </div>
     <h1>PICK</h1>
     <div class="icon">
-        <div class="rock"><img src="images/rock.svg" alt="" class="icon-images rock"></div>
-        <div class="paper"><img src="images/paper.svg" alt="" class="icon-images paper"></div>
-        <div class="scissors"><img src="images/scissors.svg" alt="" class="icon-images scissors"></div>
+      <div class="rock">
+        <img src="images/rock.svg" alt="" class="icon-images rock" />
+      </div>
+      <div class="paper">
+        <img src="images/paper.svg" alt="" class="icon-images paper" />
+      </div>
+      <div class="scissors">
+        <img src="images/scissors.svg" alt="" class="icon-images scissors" />
+      </div>
     </div>
     <h1>Computer</h1>
-    <div class="computerIcon"><img src="" alt="" class="icon-images"></div>
+    <div class="computerIcon"><img src="" alt="" class="icon-images" /></div>
     <script src="index.js"></script>
-</body>
+  </body>
 </html>
