Added Score function and win screen

--- a/index.html
+++ b/index.html
@@ -24,7 +24,10 @@
       </div>
     </div>
     <h1>Computer</h1>
-    <div class="computerIcon"><img src="" alt="" class="icon-images" /></div>
+    <div class="computerIcon">
+      <img id="compIcon" src="" alt="" class="icon-images" />
+    </div>
+    <h1 id="result"></h1>
     <script src="index.js"></script>
   </body>
 </html>
